adapatation des collapse pour la partie flat, correction de la partie carroussel, scss à revoir pour le site et media queries

--- a/src/components/Carroussel/Carroussel.scss
+++ b/src/components/Carroussel/Carroussel.scss
@@ -1,19 +1,18 @@
 .carroussel{
-    max-width: 1240px;
+    max-width: 100%;
     max-height: 415px;
     position:relative;
-    width:100%;
     overflow: hidden;
     
-&-cover{
+&_cover{
     width: 100%;
-    height: 100%;
+    height: 415px;
     object-fit: cover;
-    position: relative;
+    border-radius: 25px;
 }
 
-&-arrow-left,
-&-arrow-right{
+&_arrow-left,
+&_arrow-right{
     position: absolute;
     top:50%;
     transform: translateY(-50%);
@@ -23,11 +22,20 @@
     height: 40px;
     color: red;
 }
-&-arrow-left{
+&_arrow-left{
     left: 20px;
 
 }
-&-arrow-right{
+&_arrow-right{
     right:20px;
+}
+&_counter{
+    position: absolute;
+    bottom:20px;
+    left: 50%;
+    transform: translateX(-50%);
+    color:white;
+    font-size: 18px;
+    font-weight: bold;
 }
 }
