--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -1,6 +1,6 @@
 
 .collapse-header{
-    width: 1023px;
+    width: 100%;
     height: 54px;
     background-color: #ff6060;
     color:white;
@@ -10,12 +10,17 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    box-sizing: border-box;
+    border-radius: 5px;
+    overflow: hidden;
+
 
 
     &_title{
         font-size: 24px;
         font-weight: 700;
         height: 54px;
+        display: flex;
         align-items: center;
     }
     &_logo{
@@ -26,14 +31,21 @@
             transform: rotate(-180deg);
         }
     }
-}
 
-.collapse_content{
-    width: 1023px;
-    background-color: #f6f6f6;;
+    &_button{
+        border: none;
+        background: none;
+        padding: 0;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+    }
+
+    &_content{
+    background-color:#f6f6f6;
     border-radius: 0 0 5px 5px;
     padding: 20px;
     color: black;
     font-size:18px;
     line-height: 1.43;
-}
+}}
