--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -5,6 +5,8 @@
     flex-direction: column;
     gap:30px;
     align-items: center;
-    margin-top: 30px;
+    margin: 30px auto;
+    width: 1023px;
+    justify-content: center;
 
 }
