--- a/src/pages/Flat/Flat.scss
+++ b/src/pages/Flat/Flat.scss
@@ -1,6 +1,6 @@
 .flat{
     max-width: 1240px;
-    height: 643px;
+    min-height: 643px;
 }
 
 .blocUn{
@@ -8,5 +8,16 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+
+}
+
+.blocDeux{
+    max-width: 1240px;
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    gap:76px;
+    margin: 20px auto;
+    box-sizing: border-box;
 
 }
